--- a/src/style.css
+++ b/src/style.css
@@ -20,9 +20,9 @@ body {
     align-items: center;
     width: 100px;
     height: 100px;
-    font-size: 2em;
+    font-size: 3em;
     background-color: #f0f0f0;
-    border: 2px solid #333;
+    border: 2px solid #bbb6b6;
     cursor: pointer;
     user-select: none;
   }
@@ -32,6 +32,11 @@ body {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    border: 2px solid #bbb6b6;
+    border-radius: 5%;;
+  }
+  #restartBtn:hover{
+    background-color:#e7e2e4;  
   }
   
   #status {
